# angel-reyna-rhymes-crawler

./: README.md  pyproject.toml
angel-reyna-rhymes-crawler/: example.py  genius.py  main.py  utils.py
tests/: crawler.py  girl_context.csv  greitis_context.csv  loose_lyrics.csv  love_context.csv  love_lyrics.csv  myliu_context.csv
