[tool.poetry]
name = "angel-reyna-rhymes-crawler"
version = "0.1.0"
description = ""
authors = ["Angel Reyna <rugile@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
